force-app/main/default/objects/Account/fields/L_PR_Branch_Manager__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Branch_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>I_RM_Affiliation__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>La Trobe Staff</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>I_RM_Affiliation__c</referenceTo>
    <relationshipLabel>Organisations (Branch Manager)</relationshipLabel>
    <relationshipName>Organisations_Branch_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>