force-app/main/default/objects/Account/fields/L_PR_Business_Rego_Number__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Business_Rego_Number__c</fullName>
    <label>International Business Reg Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>