force-app/main/default/objects/Account/fields/L_PR_Campus_Interest__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Campus_Interest__c</fullName>
    <label>Campus Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Campus</valueSetName>
    </valueSet>
</CustomField>