force-app/main/default/objects/Account/fields/L_PR_Domestic_International__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Domestic_International__c</fullName>
    <label>Domestic/International</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Domestic &amp; International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>