force-app/main/default/objects/Account/fields/L_PR_No_of_Active_Leads__c.field-meta.xml
<CustomField>
    <fullName>L_PR_No_of_Active_Leads__c</fullName>
    <label>Number of Active Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>