force-app/main/default/objects/Account/fields/L_PR_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Portfolio__c</fullName>
    <label>Portfolio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>L_PR_Country_Portfolio</valueSetName>
    </valueSet>
</CustomField>