force-app/main/default/objects/Account/fields/L_PR_Secondary_Organisation_Email__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Secondary_Organisation_Email__c</fullName>
    <label>Secondary Organisation Email</label>
    <type>Email</type>
</CustomField>