force-app/main/default/objects/Account/fields/L_PR_Size__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small (0-19 persons employed)</fullName>
            </value>
            <value>
                <fullName>Medium (20-199 persons employed)</fullName>
            </value>
            <value>
                <fullName>Large (200 or more persons employed)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>