force-app/main/default/objects/Account/fields/L_PR_Strategic_Summary__c.field-meta.xml
<CustomField>
    <fullName>L_PR_Strategic_Summary__c</fullName>
    <label>Strategic Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>