force-app/main/default/objects/Account/fields/L_PR_StudyLink_Access__c.field-meta.xml
<CustomField>
    <fullName>L_PR_StudyLink_Access__c</fullName>
    <label>StudyLink access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Granted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>