force-app/main/default/objects/Account/fields/L_PR_StudyLink_Agency_ID__c.field-meta.xml
<CustomField>
    <fullName>L_PR_StudyLink_Agency_ID__c</fullName>
    <label>StudyLink Agency ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>