force-app/main/default/objects/Account/fields/L_PR_StudyLink_Name__c.field-meta.xml
<CustomField>
    <fullName>L_PR_StudyLink_Name__c</fullName>
    <inlineHelpText>This field must follow the Study Link naming convention Eg. “Agency-Country-City”.</inlineHelpText>
    <label>Study link Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>