force-app/main/default/objects/Account/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>La Trobe Division Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>Unit</fullName>
            </value>
            <value>
                <fullName>DVCR</fullName>
            </value>
            <value>
                <fullName>Research Centre/Institute</fullName>
            </value>
            <value>
                <fullName>Research Focus Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>