force-app/main/default/objects/Account/recordTypes/I_RS_External_Organisation.recordType-meta.xml
<RecordType>
    <fullName>I_RS_External_Organisation</fullName>
    <active>true</active>
    <label>External Organisation</label>
</RecordType>