force-app/main/default/objects/Account/recordTypes/I_RS_La_Trobe_Organisation_Unit.recordType-meta.xml
<RecordType>
    <fullName>I_RS_La_Trobe_Organisation_Unit</fullName>
    <active>true</active>
    <label>La Trobe Organisation Unit</label>
</RecordType>