force-app/main/default/objects/Account/recordTypes/I_ST_Educational_Institution.recordType-meta.xml
<RecordType>
    <fullName>I_ST_Educational_Institution</fullName>
    <active>true</active>
    <description>An educational institution.</description>
    <label>Educational Institution</label>
</RecordType>