force-app/main/default/objects/Account/recordTypes/I_ST_Lead_Account.recordType-meta.xml
<RecordType>
    <fullName>I_ST_Lead_Account</fullName>
    <active>true</active>
    <description>An administrative account for Leads that are not associated with an Account.</description>
    <label>Lead Account</label>
</RecordType>