force-app/main/default/objects/Account/validationRules/Alert_Reason_mandatory_when_Alert_checkd.validationRule-meta.xml
<ValidationRule>
    <fullName>Alert_Reason_mandatory_when_Alert_checkd</fullName>
    <active>true</active>
    <description>Alert Reason is mandatory when alert is checked</description>
    <errorConditionFormula>ISBLANK(L_PR_Alert_Reason__c)  &amp;&amp;  L_PR_Alert__c == TRUE</errorConditionFormula>
    <errorDisplayField>L_PR_Alert_Reason__c</errorDisplayField>
    <errorMessage>Alert Reason is mandatory when Alert is checked</errorMessage>
</ValidationRule>