force-app/main/default/objects/Account/validationRules/Cant_fill_Alert_Reason_if_Alert_Uncheck.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_fill_Alert_Reason_if_Alert_Uncheck</fullName>
    <active>true</active>
    <description>Cannot fill Alert Reason if Alert is unticked</description>
    <errorConditionFormula>NOT( ISBLANK( L_PR_Alert_Reason__c ) ) &amp;&amp;  L_PR_Alert__c = FALSE</errorConditionFormula>
    <errorDisplayField>L_PR_Alert_Reason__c</errorDisplayField>
    <errorMessage>Cannot fill Alert Reason if Alert is unticked</errorMessage>
</ValidationRule>