force-app/main/default/objects/Account/validationRules/End_Date_greater_to_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_greater_to_start_date</fullName>
    <active>true</active>
    <description>End Date can&apos;t be less than Start Date</description>
    <errorConditionFormula>I_RS_End_Date__c &lt;  I_RS_Start_Date__c</errorConditionFormula>
    <errorDisplayField>I_RS_End_Date__c</errorDisplayField>
    <errorMessage>End Date can&apos;t be less than Start Date</errorMessage>
</ValidationRule>