force-app/main/default/objects/Account/validationRules/I_RS_PRIME_Users_Cant_Change_Record_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>I_RS_PRIME_Users_Cant_Change_Record_Type</fullName>
    <active>true</active>
    <description>For PRIME record types, prevent standard users from changing the record type</description>
    <errorConditionFormula>/*Whitelisted profiles*/
!
($Profile.Name = &apos;System Administrator&apos; ||
$Profile.Name = &apos;LTU Integration&apos; )

&amp;&amp;

/*PRIME Record Type cannot be changed*/
(
ISCHANGED(RecordTypeId)  &amp;&amp;
(
RecordType.DeveloperName = &quot;I_RS_La_Trobe_Organisation_Unit&quot; ||
RecordType.DeveloperName = &quot;I_RS_External_Organisation&quot;
)
)</errorConditionFormula>
    <errorMessage>The Organisation Record Type on La Trobe Org Units cannot be changed</errorMessage>
</ValidationRule>