force-app/main/default/objects/Account/validationRules/L_PR_Reason_for_closed_Cannot_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>L_PR_Reason_for_closed_Cannot_be_empty</fullName>
    <active>true</active>
    <description>Reason for Closed  field should be updated when the Organization status is changed to closed.</description>
    <errorConditionFormula>AND($Profile.Name = &apos;PRM User&apos;,
    ISPICKVAL(I_RS_Status__c, &apos;Closed&apos;),
    ISBLANK(L_PR_Closed_Reason__c)
)</errorConditionFormula>
    <errorDisplayField>L_PR_Closed_Reason__c</errorDisplayField>
    <errorMessage>Please update the Closed Reason field</errorMessage>
</ValidationRule>