force-app/main/default/objects/Account/validationRules/L_PR_Record_Update_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>L_PR_Record_Update_Rule</fullName>
    <active>false</active>
    <description>PRM Users are allowed to update only External Organization and Educational Institution record types.</description>
    <errorConditionFormula>and
(
not(isnew()),
(RecordType.DeveloperName &lt;&gt; &apos;I_ST_Educational_Institution&apos;
&amp;&amp;
RecordType.DeveloperName &lt;&gt; &apos;I_RS_External_Organisation&apos;
),
$Profile.Name = &apos;PRM User&apos;)</errorConditionFormula>
    <errorMessage>You do not have permission to update this type of Organisation.</errorMessage>
</ValidationRule>