force-app/main/default/objects/Account/validationRules/Org_Cannot_Rename_LaTrobe_University.validationRule-meta.xml
<ValidationRule>
    <fullName>Org_Cannot_Rename_LaTrobe_University</fullName>
    <active>true</active>
    <description>User should not be allowed to rename LaTrobe university org</description>
    <errorConditionFormula>AND (
ISCHANGED(Name),
(Name &lt;&gt; $Label.Top_Org_Name_LaTrobe),
(PRIORVALUE(Name) = $Label.Top_Org_Name_LaTrobe)
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>&quot;La Trobe University&quot; cannot be renamed</errorMessage>
</ValidationRule>