force-app/main/default/objects/Account/validationRules/Org_LaTrobe_cannot_have_parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Org_LaTrobe_cannot_have_parent</fullName>
    <active>true</active>
    <description>The University Org for LaTrobe cannot have a parent as it is the top most org</description>
    <errorConditionFormula>AND(
OR(
 ISNEW(),
 ISCHANGED(Name),
 ISCHANGED(ParentId),
 ISCHANGED(I_RS_Part_of_La_Trobe__c)
),

AND (
 NOT(ISBLANK(ParentId)),
 Name = $Label.Top_Org_Name_LaTrobe
)
)</errorConditionFormula>
    <errorDisplayField>ParentId</errorDisplayField>
    <errorMessage>&quot;La Trobe University&quot; cannot have a related (Parent) organisation</errorMessage>
</ValidationRule>