force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>I_RS_Part_of_La_Trobe__c</columns>
    <columns>I_RS_Organisation_Head__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Organisations</label>
</ListView>