force-app/main/default/objects/Account/listViews/Research_Centres_Research_Focus_Areas.listView-meta.xml
<ListView>
    <fullName>Research_Centres_Research_Focus_Areas</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>I_RS_Part_of_La_Trobe__c</columns>
    <columns>I_RS_Organisation_Head__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Research Centre/Institute,Research Focus Area</value>
    </filters>
    <label>Research Centres/Research Focus Areas</label>
</ListView>